--- a/src/pages/projects/project.scss
+++ b/src/pages/projects/project.scss
@@ -1,4 +1,5 @@
 @use '../../styles/breakpoints.scss';
+@use '../../styles/colors.scss';
 @use '../../styles/typography.scss';
 
 .project {
@@ -46,6 +47,9 @@
 	}
 
 	&__section-list-item {
+		&--bottom-padding {
+			margin-bottom: 10px;
+		}
 	}
 
 	&__section-nested-list-item {
@@ -60,9 +64,30 @@
 	}
 
 	&__image-container {
+		border: 2px solid var(--gray-150);
+		border-radius: 10px;
 		display: flex;
-		height: 200px;
-		width: 250px;
+		justify-content: flex-start;
+		overflow: hidden;
+		padding: 20px;
+		width: 100%;
+
+		&--landscape {
+			:global(img) {
+				height: auto;
+				width: 100%;
+			}
+		}
+
+		&--portrait {
+			justify-content: center;
+
+			:global(img) {
+				max-height: 400px;
+				max-width: 100%;
+				width: auto;
+			}
+		}
 	}
 }
 
@@ -95,10 +120,12 @@
 		}
 
 		&__images {
-			grid-template-columns: repeat(auto-fit, minmax(0, 250px));
-			grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
-			gap: 15px;
-			justify-content: center;
+			&--columns {
+				grid-template-columns: repeat(3, 1fr);
+				grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
+				gap: 15px;
+				justify-content: center;
+			}
 		}
 	}
 }
