feat: updating Button styling, adding image assets to skillset sections, EmployerProjectHistory title link styling

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -66,6 +66,7 @@ const isLinkType = 'link--primary' === type;
 
 		&:active {
 			background-color: var(--blue-150);
+			color: colors.$white;
 		}
 	}
 
