feat: updating favicon to kokopelli, adding kokopelli logo to mobile header, and updating global anchor link styling

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -70,4 +70,8 @@ const isLinkType = 'link--primary' === type;
 		}
 	}
 
+	:global(.dark-mode .button--primary) {
+		color: colors.$white;
+	}
+
 </style>
